参考リンクを追加

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <div class="references">
         <ul class="references">
             <li>
-                Guides and Tutorials | Linked Data - Connect Distributed Data across the Web
-                http://linkeddata.org/guides-and-tutorials
+            Guides and Tutorials | Linked Data - Connect Distributed Data across the Web
+            http://linkeddata.org/guides-and-tutorials
+            </li>
+            <li>
+            Linked Data - Design Issues
+            http://www.w3.org/DesignIssues/LinkedData.html
             </li>
         </ul>
     </div>
